--- a/assets/style.css
+++ b/assets/style.css
@@ -107,3 +107,15 @@ button:focus {
   list-style: none;
   font-size: 1.5em;
 }
+
+.order {
+  border: 1;
+  border-width: 1px;
+  border-style: solid;
+  border-color: white;
+  background-color: rgb(51, 51, 51);
+  margin-top: .35em;
+  padding: .25em;
+  border-radius: 3px;
+
+}
